--- a/app/src/main/res/layout/line_number.xml
+++ b/app/src/main/res/layout/line_number.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:layout_width="wrap_content"
-          android:layout_height="wrap_content"
-          android:paddingLeft="3dp"
-          android:paddingRight="3dp"
-          android:background="@drawable/rounded_rectangle"
-          style="@android:style/TextAppearance.Material.Small"
-          android:textStyle="bold"
-          android:textColor="@color/kinda_white"
-          android:textAlignment="center"
-          android:layout_marginEnd="4dp"
-          android:layout_marginBottom="4dp"
-        />
+        style="@android:style/TextAppearance.Material.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/rounded_rectangle"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:textAlignment="center"
+        android:textColor="@color/kinda_white"
+        android:textStyle="bold" />
