--- a/app/src/main/res/layout/stop_details_destination.xml
+++ b/app/src/main/res/layout/stop_details_destination.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment"
         android:id="@+id/stop_details_coordinator_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        tools:context="com.jorkoh.transportezaragozakt.destinations.stop_details.StopDetailsFragment">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/stop_details_appBar"
@@ -16,21 +15,20 @@
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/stop_details_collapsing_toolbar_layout"
+                style="@style/CustomActionBarStyle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:theme="@style/CustomActionBarTheme"
                 app:contentScrim="?attr/colorPrimary"
-                style="@style/CustomActionBarStyle"
-                app:titleEnabled="false"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
-                android:theme="@style/CustomActionBarTheme">
+                app:titleEnabled="false">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:paddingTop="?attr/actionBarSize"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginEnd="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="?attr/actionBarSize"
+                    android:layout_marginEnd="10dp"
                     android:focusable="true">
 
                 <ImageView
@@ -39,28 +37,30 @@
                         android:layout_height="65dp"
                         android:layout_marginBottom="8dp"
                         android:contentDescription="@string/stop_type"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/stop_details_title_text"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"/>
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                        android:textAppearance="?android:attr/textAppearanceLarge"
                         android:id="@+id/stop_details_title_text"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:textColor="?colorOnPrimary"
                         android:layout_marginStart="8dp"
-                        app:layout_constraintStart_toEndOf="@id/stop_details_type_image"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:textColor="?colorOnPrimary"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"/>
+                        app:layout_constraintStart_toEndOf="@id/stop_details_type_image"
+                        app:layout_constraintBottom_toTopOf="@id/stop_details_lines_layout"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                 <GridLayout
-                        android:orientation="horizontal"
                         android:id="@+id/stop_details_lines_layout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="8dp"
                         android:layout_marginBottom="8dp"
+                        android:orientation="horizontal"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/stop_details_type_image"
@@ -70,39 +70,39 @@
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@id/fragment_toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:theme="@style/CustomActionBarTheme"
                     style="@style/CustomActionBarStyle"
-                    app:layout_collapseMode="pin"/>
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:theme="@style/CustomActionBarTheme"
+                    app:layout_collapseMode="pin" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/stop_details_constraint_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/stop_details_constraint_layout"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/stop_details_no_data_animation"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:lottie_rawRes="@raw/lottie_stop"
-                app:lottie_loop="true"
-                app:lottie_autoPlay="true"
-                app:lottie_scale="0.3"
                 android:scaleType="centerInside"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/stop_details_no_data_text"
                 android:visibility="gone"
+                app:layout_constraintBottom_toTopOf="@id/stop_details_no_data_text"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.2"
                 app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintVertical_bias="0.2"/>
+                app:lottie_autoPlay="true"
+                app:lottie_loop="true"
+                app:lottie_rawRes="@raw/lottie_stop"
+                app:lottie_scale="0.3" />
 
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                 android:id="@+id/swiperefresh"
@@ -113,47 +113,47 @@
                     android:id="@+id/stop_details_recycler_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:clipToPadding="false"
                     android:paddingTop="4dp"
                     android:paddingBottom="4dp"
-                    android:clipToPadding="false"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
         <com.jorkoh.transportezaragozakt.destinations.stop_details.WrapWidthTextView
                 android:id="@+id/stop_details_no_data_text"
-                android:text="@string/no_data_available"
-                android:textColor="?colorOnBackground"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:gravity="center_horizontal"
+                android:text="@string/no_data_available"
+                android:textAppearance="@android:style/TextAppearance.Material.Headline"
+                android:textColor="?colorOnBackground"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/stop_details_no_data_help"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintHorizontal_chainStyle="packed"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/stop_details_no_data_help"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/stop_details_no_data_animation"
-                android:visibility="gone"
-                android:layout_marginStart="32dp"
-                android:textAppearance="@android:style/TextAppearance.Material.Headline"
-                android:gravity="center_horizontal"
-                app:layout_constraintHorizontal_bias="0.5"
-                android:layout_marginTop="32dp"/>
+                app:layout_constraintTop_toBottomOf="@+id/stop_details_no_data_animation" />
 
         <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/stop_details_no_data_help"
                 style="@style/Widget.AppCompat.ImageButton"
                 android:layout_width="48dp"
                 android:layout_height="48dp"
-                android:src="@drawable/ic_help_outline_black_24dp"
+                android:layout_marginEnd="32dp"
                 android:background="@android:color/transparent"
-                app:layout_constraintTop_toTopOf="@+id/stop_details_no_data_text"
+                android:src="@drawable/ic_help_outline_black_24dp"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="@+id/stop_details_no_data_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/stop_details_no_data_text"
-                android:visibility="gone"
-                android:layout_marginEnd="32dp"/>
+                app:layout_constraintTop_toTopOf="@+id/stop_details_no_data_text" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
